# agentflow-pmi

./: .env.example  .gitignore  Analisi Tecnica dei Design Pattern per S.md  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  pyproject.toml  railway.toml  test.db-journal
Docs/: Analisi_Frontend_PWA_Roadmap.md  Email_A-Cube_Kickoff_Tecnico.md  Gap_Analysis_AgentFlow_NExadata.md  Guida_CRM_AgentFlow.md  Guida_Setup_Odoo18_CRM.md  Piano_Test_Social_Selling_Scenari_Reali.md  Spec_Modulo_Social_Selling.md  banking-ai-parser.md  state-snapshots-architecture.md
api/: config.py  main.py
brainstorm/: 00-assessment.md  01-brainstorm.md  02-problem-framing.md  03-market-research.md  04-mvp-scope.md  05-ux-flows.md  06-architecture.md  07-compare-llm.md  08-self-healing-compare.md  09-puzzle-dashboard-design.md  10-next-session-plan.md  11-iva-scadenzari-anticipi.md  12-crm-interno-brevo-email.md  13-social-selling-divergenza.md  14-social-selling-sfida.md  15-social-selling-sintesi.md  16-chatbot-ui-brainstorm.md  17-bot-orb-spec.md  _changelog.md  _status.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
mcp-server/: generate_mcp.py  server.py
monitoring/: error_middleware.py  heartbeat_client.py
scripts/: fix_assign_schedule.py  force_sync_all.py  probe_acube_recent.py  reparse_all_transactions.py  smoke_acube_ob.py  sync_all_openbanking.py  sync_cassetto_now.py
specs/: 01-vision.md  02-prd.md  03-user-stories-agentic.md  03-user-stories-calendar.md  03-user-stories-dashboard.md  03-user-stories-pivot10-metering.md  03-user-stories-pivot6.md  (+19 more)
(+717 files in other folders)
