[project]
name = "agentflow-pmi"
version = "0.1.0"
description = "AgentFlow PMI - ContaBot: L'agente contabile AI per PMI italiane"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "api/modules"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (fast, no DB)",
    "integration: integration tests (needs DB + Redis)",
    "e2e: end-to-end browser tests (needs full stack)",
    "slow: tests that take >5s",
]

[tool.coverage.run]
source = ["api"]
omit = ["*/tests/*", "*/migrations/*", "*/__tests__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
